# TP-tasks

./: CMakeLists.txt  Game.cpp  README.md  army.cpp  army.h  artillery.cpp  artillery.h  constants.h  game.cpp  game.h  german_army_factory.cpp  infantry.cpp  infantry.h  main.cpp  observer.cpp  observer.h  rocket.cpp  rocket.h  run.sh  soviet_army_factory.cpp  subdivision.cpp  subdivision.h  tank.cpp  tank.h  task1.sh  test.cpp  tests.cpp  unit.h  vector.h  vector_tests.cpp  visitor.cpp  visitor.h
A/: CMakeLists.txt  preparing.py
B/: CMakeLists.txt  lib.cpp
C/: main.cpp
